--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Horiseon</title>
 </head>
 
@@ -37,7 +37,7 @@
         <main>
 
             <section id="search-engine-optimization" class="service">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+                <img src="./img/search-engine-optimization.jpg" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -46,7 +46,7 @@
 
                 <section id="online-reputation-management" class="service-online-reputation-management">
 
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right"/>
+                <img src="./img/online-reputation-management.jpg" class="float-right"/>
                 <h2>Online Reputation Management</h2>
                 <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -55,7 +55,7 @@
                 </section>
 
                 <section id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left"/>
+                <img src="./img/social-media-marketing.jpg" class="float-left"/>
                 <h2>Social Media Marketing</h2>
                
                 <p>
@@ -75,7 +75,7 @@
 
           <h3>Lead Generation</h3>
 
-          <img src="./assets/images/lead-generation.png"/>
+          <img src="./img/lead-generation.png"/>
 
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
@@ -87,7 +87,7 @@
 
             <h3>Brand Awareness</h3>
 
-            <img src="./assets/images/brand-awareness.png"/>
+            <img src="./img/brand-awareness.png"/>
 
              <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
@@ -99,7 +99,7 @@
 
             <h3>Cost Management</h3>
 
-            <img src="./assets/images/cost-management.png" />
+            <img src="./img/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
